src/test/deca/context/invalid/sansObj/decl-double.deca
// Description:
//    Déclaration d'une variable déjà déclarée
//
// Résultat:
//Une autre variable déjà déclarée a le même nom
//
{
   int a = 1;
   int a = 32;
}